# hedgefund-arch

./: .gitignore  README.md  pyproject.toml  secret.json
artifacts/: asset_discovery_results.csv  contribution_by_asset_portfolio_ml_btc_eth_sol_link_bnb_xrp_trx_v8_q40_conviction_soft.csv  contribution_timeseries_portfolio_ml_btc_eth_sol_link_bnb_xrp_trx_v8_q40_conviction_soft.csv  exit_policy_registry.json  exit_policy_registry.promoted_frozen_aave_link_eth_xrp_short_sl_1_20.20260411T034953Z.json  exit_policy_registry.sweep_winners.json  exposure_sensitivity_btc_link_bnb_xrp.csv  ml_baseline_registry_v1.joblib  ml_baseline_registry_v1.metrics.json  ml_baseline_ywin3.pkl  ml_baseline_ywin3_metrics.json  ml_btc_long_ywin3.pkl  ml_btc_long_ywin3_metrics.json  ml_btc_short_wf.pkl  ml_btc_short_wf_metrics.json  ml_btc_short_ywin3.pkl  ml_btc_short_ywin3_metrics.json  ml_position_size_calibration_v1.csv  ml_position_size_map_v1.json  ml_registry.json  ml_registry_wf.json  ml_strategy_ensemble_registry_topn8_wf.joblib  ml_strategy_ensemble_registry_topn8_wf_metrics.json  ml_strategy_ensemble_registry_v1.joblib  ml_strategy_ensemble_registry_v1.metrics.json  ml_strategy_ensemble_registry_v2.joblib  ml_strategy_ensemble_registry_v2_metrics.json  ml_strategy_ensemble_registry_v3.joblib  ml_strategy_ensemble_registry_v3_metrics.json  ml_strategy_ensemble_registry_v5.joblib  ml_strategy_ensemble_registry_v5_metrics.json  ml_strategy_ensemble_registry_v6.joblib  ml_strategy_ensemble_registry_v6_metrics.json  ml_strategy_ensemble_registry_v7.joblib  (+108 more)
deploy/: cleanup_runtime_space.sh  (+7 more)
(+403 files in other folders)
